# crewai-multi-agent-research

./: README.md  pyproject.toml
data/processed/: Coffee_macro_fx_daily.csv  coffee_features_daily.csv  features_daily.csv
data/raw/: Coffee_extraction_metadata.json  Coffee_yahoo_ohlcv_1d.csv
multi_agent_research/: crew.py  main.py
multi_agent_research/config/: agents.yaml  tasks.yaml
multi_agent_research/tools/: dataset_build_tools.py  fred_tools.py  open_meteo_tools.py  yahoo_finance_tools.py
